# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/en/

Version 8.3.0
  - Fix for Bug#112195 (Bug#35749998), getWarnings() of StatementImpl contains all warnings.

  - Fix for Bug#96582 (Bug#30222032), jdbc.MysqlParameterMetadata#isNullable doesnt check whether to be simple.

  - Fix for Bug#111360 (Bug#35488208), Unexpected list of permitted ciphers.

  - Fix for Bug#95796 (Bug#29907618), Parameter metadata inferred incorrectly when procedure or function doesn't exist.

  - Fix for Bug#73774 (Bug#19531305), Can't execute a stored procedure if exists function with same name.

Version 8.2.0

  - Fix for Bug#35811592, Missing implementation for Connection.releaseSavepoint().

  - Fix for Bug#91351 (Bug#28225464), MysqlConnectionPoolDataSource - autocommit status lost if global autocommit = 0.

  - WL#15197, Support WebauthN in fido authentication plugin.

  - Fix for Bug#107215 (Bug#34139593), ClassCastException: java.time.LocalDateTime cannot be cast to java.sql.Timestamp.

  - WL#15747, Remove autoDeserialize feature.

  - Fix for Bug#35358417, MySQL Connector/J is not parsing the sessionStateChanges from the OK_Packet correctly.

  - WL#15845, Stop building artifacts for old maven coordinates.

Version 8.1.0

  - WL#15826, Deprecate autoDeserialize feature.

  - Fix for Bug#95039 (Bug#35534640), KeyManagementException: FIPS mode: only SunJSSE TrustManagers may be used.

  - Fix for Bug#110321 (Bug#35167701), Issue in JDBC PreparedStatement on adding NO_BACKSLASH_ESCAPES in sql_mode.

Version 8.0.33

  - Fix for Bug#34558945, PS using setCharacterStream() fails with "Incorrect string value" if the Java program encoding is not UTF-8 after 8.0.29.

  - Fix for Bug#109013 (Bug#34772608), useServerPrepStmts and useLocalTransactionState could cause rollback failure.

  - Fix for bug Bug#108643 (Bug#34652568), Commit statement not effect when two params turns on.
